--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,10 +1,7 @@
 ﻿<Window x:Class="OpenGE.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="OpenGE Game Editor" Height="800" Width="1200"
-        SizeChanged="Window_SizeChanged"
-        KeyDown="Window_KeyDown"
-        MouseMove="Window_MouseMove">
+        Title="OpenGE Game Editor" Height="800" Width="1200">
     <Grid>
         <!-- Main layout structure -->
         <Grid.ColumnDefinitions>
@@ -25,23 +22,33 @@
 
         <!-- Menu Bar -->
         <Menu Grid.Row="0" Grid.ColumnSpan="3" VerticalAlignment="Top">
-            <MenuItem Header="Tools">
-                <MenuItem Header="Build"></MenuItem>
-            </MenuItem>
             <MenuItem Header="File">
+                <MenuItem Header="New Project" Click="NewProject_Click"/>
                 <MenuItem Header="New Scene" Click="NewScene_Click"/>
                 <MenuItem Header="Open Scene" Click="OpenScene_Click"/>
                 <MenuItem Header="Save Scene" Click="SaveScene_Click"/>
                 <MenuItem Header="Exit" Click="Exit_Click"/>
             </MenuItem>
+
             <MenuItem Header="Edit">
-                <MenuItem Header="Undo"/>
-                <MenuItem Header="Redo"/>
+                <MenuItem Header="Undo" Click="Undo_Click"/>
+                <MenuItem Header="Redo" Click="Redo_Click"/>
+            </MenuItem>
+            <MenuItem Header="View">
+                <MenuItem Header="Toggle Grid" Click="ToggleGrid_Click"/>
+            </MenuItem>
+            <MenuItem Header="Assets">
+                <MenuItem Header="Import Asset" Click="ImportAsset_Click"/>
+            </MenuItem>
+            <MenuItem Header="Build">
+                <MenuItem Header="Build Settings" Click="BuildSettings_Click"/>
             </MenuItem>
             <MenuItem Header="Window">
-                <MenuItem Header="Layout 1"/>
-                <MenuItem Header="Layout 2"/>
+                <MenuItem Header="Preference"/>
+                <MenuItem Header="Content Manager" Click="OpenContentManager_Click"/>
+                <MenuItem Header="About OpenGE" Click="About_Click"/>
             </MenuItem>
+
         </Menu>
 
         <!-- Project/Hierarchy Panel -->
@@ -50,13 +57,8 @@
             <!-- Content goes here -->
         </DockPanel>
 
-        <!-- Viewport with background -->
-        <Grid Grid.Row="1" Grid.Column="1" Margin="10">
-            <!-- Background for the viewport -->
-            <Border Background="Black" />
-            <!-- Viewport3D -->
-            <Viewport3D Name="RenderViewport" />
-        </Grid>
+        <!-- Viewport -->
+        <Canvas Name="RenderCanvas" Grid.Row="1" Grid.Column="1" Background="Black" Margin="10" />
 
         <!-- Inspector -->
         <DockPanel Grid.Row="1" Grid.Column="2" Background="#3A3A3A">
